bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: not found: value While
While (fini==false) {
^BDR:14: error: too many arguments for method droite: ()Unit
    droite(180);
          ^